# Database

./: .gitignore  CMakeLists.txt  DatabaseFactory.h  IColumn.h  IDatabase.h  IRow.h  ITable.h  IVariableData.h  README.md  build.sh  chinook.db
configuration/: amd64.cmake  armhf.cmake
internal/: Column.h  Database.h  Row.h  Table.h  VariableData.h
internal/maria/: MariaColumn.h  MariaDB.h  MariaTable.h  MariaUtility.h
internal/pgsql/: PgSqlColumn.h  PgSqlDB.h  PgSqlTable.h  PgSqlUtility.h
internal/sqlite/: SQLiteColumn.h  SQLiteDB.h  SQLiteTable.h  SQLiteUtility.h
resources/: sqlite.json
schema/: database.schema.json  table.schema.json
src/: Column.cpp  Database.cpp  DatabaseFactory.cpp  Row.cpp  Table.cpp  VariableData.cpp
src/maria/: MariaColumn.cpp  MariaDB.cpp  MariaTable.cpp  MariaUtility.cpp
src/pgsql/: PgSqlColumn.cpp  PgSqlDB.cpp  PgSqlTable.cpp  PgSqlUtility.cpp
src/sqlite/: SQLiteColumn.cpp  SQLiteDB.cpp  SQLiteTable.cpp  SQLiteUtility.cpp
test/: main.cpp
tools/: tools.h
tools/src/: tools.cpp
